Added reflection and refraction part

--- a/report/Chapter1.tex
+++ b/report/Chapter1.tex
@@ -208,6 +208,6 @@ Instead of assigning a single texture, I used a texture for vertices below a cer
 
 \subsection{References}
 
-If you want to find the things mentioned above, you can check \textbf{terrainManagement.h}, \textbf{terrainVert.vert}, \textbf{terrainFrag.frag} files.
+If you want to find more about the things mentioned above, you can check \textbf{terrainManagement.h}, \textbf{terrainVert.vert}, \textbf{terrainFrag.frag} files.
 
 \newpage
