--- a/report/Intro.tex
+++ b/report/Intro.tex
@@ -1,4 +1,4 @@
 \section{Introduction and purpose of the project}
-The aim of this project was to create infinite procedural terrain with other aesthetic elements such as water and trees using \textbf{OpenGL}.
+The aim of this project was to create an infinite procedural terrain with other aesthetic elements such as water and trees using \textbf{OpenGL}.
 In the following chapters I will describe the different components of the project and how I have implemented them.
 \newpage
